--- a/styles/cover/cover.css
+++ b/styles/cover/cover.css
@@ -27,9 +27,49 @@
 }
 
 .cover__content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    margin: 0;
+    margin: auto;
+    padding-top: 154px;
+    width: 55%
+}
+
+.cover {
+    width: 92.5%;
+    height: 57.8vw;
+    margin: 0 auto;
+}
+
+@media screen and (max-device-width: 1024px) {
+    .cover {
+        width: 100%;
+        height: 62.5vw;
+    }
+}
+
+@media screen and (max-device-width: 768px) {
+    .cover {
+        width: 100%;
+        height: 62.5vw;
+    }
+}
+
+@media screen and (max-device-width: 320px) {
+    .cover {
+        width: 100%;
+        height: 62.5vw;
+    }
+
+    .cover__content {
+        padding-top: 30px;
+        width: 90%
+    }
+
+    .cover__subtitle {
+        width: 90%;
+        padding-top: 10px;
+    }
+
+    .footer__item.font-size_xl {
+        font-size: 24px;
+    }
+
 }
