--- a/styles/header/header.css
+++ b/styles/header/header.css
@@ -5,9 +5,27 @@
     display: flex;
     color: white;
     justify-content: space-between;
-    border: red 1px solid
 }
 
-.header__logo {
+@media screen and (max-device-width: 1024px){
+    .header {
+        width: 90%;
+    }
+}
 
+@media screen and (max-device-width: 768px){
+    .lead {
+        width: 94%;
+    }
+}
+
+@media screen and (max-device-width: 320px) {
+    .lead {
+        width: 90%;
+    }
+
+    .header {
+        margin: auto;
+        padding-bottom: 26px;
+    }
 }
