--- a/styles/photo-grid/photo-grid.css
+++ b/styles/photo-grid/photo-grid.css
@@ -17,3 +17,29 @@
     width: 100%;
     height: auto;
 }
+
+
+@media screen and (max-device-width: 1024px){
+    .photo__container {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(4, auto);
+    }
+}
+
+@media screen and (max-device-width: 768px){
+    .photo__container {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(6, auto);
+    }
+}
+
+
+@media screen and (max-device-width: 320px) {
+    .photo {
+        margin: auto;
+    }
+    .photo__container {
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(12, auto);
+    }
+}
