--- a/styles/text.css
+++ b/styles/text.css
@@ -38,47 +38,36 @@
     font-size: 96px;
 }
 
-/*.text-xs {*/
-/*    font-size: 0.75rem;*/
-/*    line-height: 1rem;*/
-/*}*/
-/*.text-sm {*/
-/*    font-size: 0.875rem;*/
-/*    line-height: 1.25rem;*/
-/*}*/
-/*.text-base {*/
-/*    font-size: 1rem;*/
-/*    line-height: 1.5rem;*/
-/*}*/
-/*.text-lg {*/
-/*    font-size: 1.125rem;*/
-/*    line-height: 1.75rem;*/
-/*}*/
-/*.text-xl {*/
-/*    font-size: 1.25rem;*/
-/*    line-height: 1.75rem;*/
-/*}*/
-/*.text-2xl {*/
-/*    font-size: 1.5rem;*/
-/*    line-height: 2rem;*/
-/*}*/
-/*.text-2x {*/
-/*    font-size: 1.75rem;*/
-/*    line-height: 2.25rem;*/
-/*}*/
-/*.text-3xl {*/
-/*    font-size: 1.875rem;*/
-/*    line-height: 2.25rem;*/
-/*}*/
-/*.text-4xl {*/
-/*    font-size: 2.25rem;*/
-/*    line-height: 2.5rem;*/
-/*}*/
-/*.text-5xl {*/
-/*    font-size: 3rem;*/
-/*    line-height: 1;*/
-/*}*/
-/*.text-6xl {*/
-/*    font-size: 5rem;*/
-/*    line-height: 1;*/
-/*}*/
+
+
+@media screen and (max-device-width: 768px){
+    .font-size_xl {
+        font-size: 16px;
+    }
+
+    .font-size_5xl {
+        font-size: 42px;
+    }
+
+}
+
+@media screen and (max-device-width: 320px) {
+    .font-size_6xl {
+        font-size: 40px;
+    }
+
+    .font-size_3xl {
+        font-size: 16px;
+    }
+
+    /*.font-size_xl {*/
+    /*    font-size: 14px;*/
+    /*}*/
+
+    .font-size_5xl {
+        font-size: 32px;
+    }
+
+}
+
+
