--- a/styles/modify/fonts.css
+++ b/styles/modify/fonts.css
@@ -1,27 +1,27 @@
 @font-face {
     font-family: Inter;
-    src: url("../fonts/Inter_18pt-Regular.ttf");
+    src: url("../../fonts/Inter_18pt-Regular.ttf");
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: Inter;
-    src: url("../fonts/Inter_18pt-Bold.ttf");
+    src: url("../../fonts/Inter_18pt-Bold.ttf");
     font-weight: bold;
     font-style: normal;
 }
 
 @font-face {
     font-family: Inter;
-    src: url("../fonts/Inter_18pt-Black.ttf");
+    src: url("../../fonts/Inter_18pt-Black.ttf");
     font-weight: 900;
     font-style: normal;
 }
 
 @font-face {
     font-family: Inter;
-    src: url("../fonts/Inter_18pt-Black.ttf");
+    src: url("../../fonts/Inter_18pt-Black.ttf");
     font-weight: 100;
     font-style: normal;
 }
