--- a/styles/cover/__subtitle/cover__subtitle.css
+++ b/styles/cover/__subtitle/cover__subtitle.css
@@ -3,3 +3,11 @@
     width: 70%;
     margin: 0 auto;
 }
+
+
+@media screen and (max-device-width: 320px) {
+    .cover__subtitle {
+        width: 90%;
+        padding-top: 10px;
+    }
+}
