--- a/styles/footer/__links/footer__links.css
+++ b/styles/footer/__links/footer__links.css
@@ -2,3 +2,13 @@
     display: flex;
     gap: 18px;
 }
+
+
+
+@media screen and (max-device-width: 320px) {
+    .footer__links {
+        flex-direction: column;
+        gap:3px;
+    }
+
+}
