--- a/styles/footer/__item/footer__item.css
+++ b/styles/footer/__item/footer__item.css
@@ -3,3 +3,10 @@
     color: white;
     font-size: 16px;
 }
+
+
+@media screen and (max-device-width: 320px) {
+    .footer__item.font-size_xl {
+        font-size: 24px;
+    }
+}
