--- a/styles/intro/__title/intro__title.css
+++ b/styles/intro/__title/intro__title.css
@@ -1,3 +1,9 @@
 .intro__title {
     line-height: 58px;
 }
+
+@media screen and (max-device-width: 320px) {
+    .intro__title {
+        line-height: 58px;
+    }
+}
