--- a/styles/lead/__caption/lead__caption.css
+++ b/styles/lead/__caption/lead__caption.css
@@ -2,3 +2,17 @@
     padding-top: 0;
     margin-top: 0;
 }
+
+
+@media screen and (max-device-width: 768px){
+    .lead__caption {
+        padding-left: 25px;
+    }
+}
+
+@media screen and (max-device-width: 320px) {
+    .lead__caption {
+        padding-left: 15px;
+    }
+
+}
