--- a/styles/photo-grid/__container/photo-grid__container.css
+++ b/styles/photo-grid/__container/photo-grid__container.css
@@ -4,3 +4,22 @@
     grid-template-rows: repeat(3, auto);
     gap: 16px;
 }
+@media screen and (max-device-width: 1024px){
+    .photo-grid__container {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(4, auto);
+    }
+}
+
+@media screen and (max-device-width: 768px){
+    .photo-grid__container {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(6, auto);
+    }
+}
+@media screen and (max-device-width: 320px) {
+    .photo-grid__container {
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(12, auto);
+    }
+}
