--- a/styles/photo-grid/__photo/photo-grid__photo.css
+++ b/styles/photo-grid/__photo/photo-grid__photo.css
@@ -2,3 +2,9 @@
     width: 100%;
     height: auto;
 }
+
+@media screen and (max-device-width: 320px) {
+    .photo-grid__photo {
+        margin: auto;
+    }
+}
