--- a/styles/places/__card/places__card.css
+++ b/styles/places/__card/places__card.css
@@ -9,3 +9,35 @@
     column-gap: 40px;
     padding-top: 80px;
 }
+
+
+@media screen and (max-device-width: 1024px){
+    .places__card {
+        row-gap: 48px;
+        column-gap: 32px;
+    }
+}
+
+@media screen and (max-device-width: 768px) {
+    .places__card {
+        row-gap: 48px;
+        column-gap: 28px;
+    }
+}
+
+
+@media screen and (max-device-width: 320px) {
+    .places__card {
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(4, minmax(min-content, max-content));
+        grid-template-areas:
+    "title"
+    "website"
+    "image"
+    "paragraph";
+        row-gap: 32px;
+        column-gap: 40px;
+        padding-top: 50px;
+    }
+
+}
