--- a/styles/places/__image/places__image.css
+++ b/styles/places/__image/places__image.css
@@ -2,3 +2,24 @@
     grid-area: image;
     width: 460px;
 }
+
+
+
+@media screen and (max-device-width: 1024px){
+    .places__image {
+        width: 540px;
+    }
+}
+
+@media screen and (max-device-width: 768px){
+    .places__image {
+        width: 340px;
+    }
+}
+
+
+@media screen and (max-device-width: 320px) {
+    .places__image {
+        width: 320px;
+    }
+}
